geolocation api test

--- a/maptest2.html
+++ b/maptest2.html
@@ -20,8 +20,8 @@
             <div class="col-md-4">
                 <div style="width: 20rem;" class="card widget">
                     <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <h4 class="card-title">Location</h4>
+                        <h6 class="card-subtitle mb-2 text-muted"><span id="location"></span></h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="card-link">Card link</a>
                         <a href="#" class="card-link">Another link</a>
@@ -48,14 +48,15 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/maps.js"></script>
+    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
   src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/maps.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&callback=initMap">
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 
 </html>
