--- a/maptest2.html
+++ b/maptest2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="google-site-verification" content="PM8IU1A7YBTNUZ5N37X-ck3B-foMQ6qYx3J_iU66v6A" />
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -55,7 +56,7 @@
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/maps.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&callback=initMap">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&callback=initMap">
     </script>
 </body>
 
