--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <span class="card-title">Location</span>
                 <p>You are here: <span id="location"></span></p>
             </div>
-            <div class="card-action">
+            <!-- <div class="card-action">
                 <a href="#">This is a link</a>
                 <a href="#">This is a link</a>
-            </div>
+            </div> -->
         </div>
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
