rm whitespace at bottom of page

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
                     little markup to use effectively.</p>
             </div>
-            <div class="card-action">
+            <div class="card-action"><!-- 
                 <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
+                <a href="#">This is a link</a> -->
             </div>
         </div>
         <div class="card blue-grey darken-1">
@@ -60,9 +60,9 @@
                 <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
                     little markup to use effectively.</p>
             </div>
-            <div class="card-action">
+            <div class="card-action"><!-- 
                 <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
+                <a href="#">This is a link</a> -->
             </div>
         </div>
     </div>
