--- a/weather-debug-temp.html
+++ b/weather-debug-temp.html
@@ -21,9 +21,13 @@
 	  <br><br>
 	  <input id="submitCoordinates" type="submit" value="Submit">
 	</form>
-	<p>
-	</p>
-    <!-- JavaScript api-research.js -->
+	<div class="icon">
+	</div>
+
+
+    <!-- JavaScript api-weather.js -->
     <script type="text/javascript " src="assets/js/api-weather.js"></script>
+	<!-- JavaScript api-farmers-markets.js -->
+    <script type="text/javascript " src="assets/js/api-farmers-markets.js"></script>
 </body>
 </html>
