remove cartogram from header and place it in footer

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <!-- <div class="container"> -->
     <nav class="topbar transparent z-depth-0">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Cartogram</a>
+            <a href="#" class="brand-logo center"></a>
         </div>
     </nav>
     <nav class="toolbar">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Toolbar</a>
+            <a href="#" class="brand-logo center">Cartogram</a>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="#"><i style="color: white;" class="fa fa-google fa-2x"></i></a></li>
                 <li><a href="#"><i style="color: white;" class="fa fa-facebook fa-2x"></i></a></li>
