--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
       	</div>
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-                <span class="card-title">Card Title</span>
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                    little markup to use effectively.</p>
+                <span class="card-title">Local Farmer's Markets</span>
+                <p><span id="farmersData"></span></p>
             </div>
     	</div>
     <!-- <script type="text/javascript" src="assets/js/app.js"></script> -->
