--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
     <!-- <div class="container"> -->
     <nav class="topbar transparent z-depth-0">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo center"></a>
+            <span href="#" class="brand-logo center">Cartogram</span>
         </div>
     </nav>
     <nav class="toolbar">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Cartogram</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <ul id="nav-mobile1" class="left">
                 <li><a href="#"><i style="color: white;" class="fa fa-google fa-2x"></i></a></li>
                 <li><a href="#"><i style="color: white;" class="fa fa-facebook fa-2x"></i></a></li>
             </ul>
-            <ul id="nav-mobile" class="right hide-on-med-and-down center">
+            <ul id="nav-mobile2" class="right center">
                 <li><a href="#"><i style="color: white;" class="fa fa-map-marker fa-2x"></i></a></li>
                 <li><a href="#"><i style="color: white;" class="fa fa-search fa-2x"></i></a></li>
                 <li><a href="#"><i style="color: white;" class="fa fa-history fa-2x"></i></a></li>
@@ -39,7 +38,7 @@
     </nav>
     <div id="map"></div>
     <div id="widget-bar">
-        <div class="card widget blue-grey darken-1">
+        <div class="card widget blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Location</span>
                 <p>You are here: <span id="location"></span></p>
@@ -49,13 +48,13 @@
                 <a href="#">This is a link</a>
             </div> -->
         </div>
-        <div class="card blue-grey darken-1">
+        <div class="card blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title"><span id="weather-icon" style="float: right;"></span>Weather</span>
                 <p><span id="weatherData"></span></p>
             </div>
         </div>
-        <div class="card blue-grey darken-1">
+        <div class="card blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Local Farmer's Markets</span>
                 <p><span id="farmersData"></span></p>
