--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Cartogram</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <meta name="google-signin-client_id" content="920169152971-9o7ahum1qt80kq37idt85u41cgk2mpcj.apps.googleusercontent.com">
+    <meta name="google-signin-cookiepolicy" content="single_host_origin">
+    <meta name="google-signin-scope" content="profile email">
     <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
@@ -26,16 +29,26 @@
     <nav class="toolbar">
         <div class="nav-wrapper">
             <ul id="nav-mobile1" class="left">
-                <li><a href="#"><i style="color: white;" class="fa fa-google fa-2x"></i></a></li>
-                <li><a href="#"><i style="color: white;" class="fa fa-facebook fa-2x"></i></a></li>
+                <li><a id="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
+                <li><a id="menu-button"><i class="fa fa-cog fa-2x"></i></a></li>
+                <li><a id=""><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
             <ul id="nav-mobile2" class="right center">
-                <li><a href="#"><i style="color: white;" class="fa fa-map-marker fa-2x"></i></a></li>
-                <li><a href="#"><i style="color: white;" class="fa fa-search fa-2x"></i></a></li>
-                <li><a href="#"><i style="color: white;" class="fa fa-history fa-2x"></i></a></li>
+                <li><a><i class="fa fa-map-marker fa-2x"></i></a></li>
+                <li><a><i class="fa fa-search fa-2x"></i></a></li>
+                <li><a><form><input type="text"><input type="submit" value="go"></form></a></li>
+                <li><a><i class="fa fa-history fa-2x"></i></a></li>
             </ul>
         </div>
     </nav>
+    <div id="login-options" class="blue-ish card">
+        <div id="google-login">
+            <i class="fa fa-google fa-2x"></i> Sign in with Google
+        </div>
+        <div id="facebook-login">
+            <i class="fa fa-facebook fa-2x"></i> Sign in with Facebook
+        </div>
+    </div>
     <div id="map"></div>
     <div id="widget-bar">
         <div class="card widget blue-ish darken-1">
@@ -63,9 +76,9 @@
         <!-- <script type="text/javascript" src="assets/js/app.js"></script> -->
         <script type="text/javascript" src="assets/js/maps.js"></script>
         <script type="text/javascript" src="assets/js/api-weather.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces"
-            async defer>
-        </script>
-</body>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces" async defer></script>
+        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+        <script type="text/javascript" src="assets/js/user.js"></script>
+    </body>
 
 </html>
