cleaning up login UI

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <div class="nav-wrapper">
             <ul id="nav-mobile1" class="left">
                 <li><a id="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
-                <li><a id="menu-button"><i class="fa fa-cog fa-2x"></i></a></li>
-                <li><a id=""><i class="fa fa-sign-out fa-2x"></i></a></li>
+                <li><img id="avatar"></li>
+                <li><a id="settings-button"><i class="fa fa-cog fa-2x"></i></a></li>
+                <li><a id="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
             <ul id="nav-mobile2" class="right center">
                 <li><a><i class="fa fa-map-marker fa-2x"></i></a></li>
