working with firebase auth state

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
             <i class="fa fa-facebook fa-2x"></i> Sign in with Facebook
         </div>
     </div>
+    <div id="settings-options" class="blue-ish card">
+        <form id="settings-save">
+            <label><input id="checkBox" type="checkbox"> Save my location history</label>
+            <hr>
+            <label><input id="checkBox" type="checkbox"> Show Weather Widget</label>
+            <label><input id="checkBox" type="checkbox"> Show Farmer's Market Widget</label>
+            <label><input id="checkBox" type="checkbox"> Show Other Widget</label>
+            <input type="submit" value="Save Settings">
+        </form>
+    </div>
     <div id="map"></div>
     <div id="widget-bar">
         <div class="card widget blue-ish darken-1">
