fixing missing id attributes

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </div>
     <div id="settings-options" class="blue-ish card">
         <form id="settings-save">
-            <label><input id="checkBox" type="checkbox"> Save my location history</label>
+            <label><input id="history-checkbox" type="checkbox" checked> Save my location history</label>
             <hr>
-            <label><input id="checkBox" type="checkbox"> Show Weather Widget</label>
-            <label><input id="checkBox" type="checkbox"> Show Farmer's Market Widget</label>
-            <label><input id="checkBox" type="checkbox"> Show Other Widget</label>
+            <label><input id="weather-checkbox" type="checkbox"> Show Weather Widget</label>
+            <label><input id="farmers-checkbox" type="checkbox"> Show Farmer's Market Widget</label>
+            <label><input id="another-checkbox" type="checkbox"> Show Other Widget</label>
             <input type="submit" value="Save Settings">
         </form>
     </div>
