--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="nav-wrapper">
             <ul id="nav-mobile1" class="left">
                 <li><a id="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
-                <li><img id="avatar"></li>
+                <li><img id="avatar" class="circle"></li>
                 <li><a id="settings-button"><i class="fa fa-cog fa-2x"></i></a></li>
                 <li><a id="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
