assigning widgets unique id's

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div id="map"></div>
     <div id="widget-bar">
-        <div class="card widget blue-ish darken-1">
+        <div id="location-widget" class="card widget blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Location</span>
                 <p>You are here: <span id="location"></span></p>
@@ -82,13 +82,13 @@
                 <a href="#">This is a link</a>
             </div> -->
         </div>
-        <div class="card blue-ish darken-1">
+        <div id="weather-widget" class="card blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title"><span id="weather-icon" style="float: right;"></span>Weather</span>
                 <p><span id="weatherData"></span></p>
             </div>
         </div>
-        <div class="card blue-ish darken-1">
+        <div id="farmers-widget" class="card blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Local Farmer's Markets</span>
                 <p><span id="farmersData"></span></p>
