map search function working

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul id="nav-mobile2" class="right center">
                 <li><a><i class="fa fa-map-marker fa-2x"></i></a></li>
                 <li><a><i id="searchicon" class="fa fa-search fa-2x"></i></a></li>
-                <li><a><form class="searchbar"><input type="text" placeholder="Search"><input type="submit" value="go"></form></a></li>
+                <li><a><form class="searchbar"><input id="pac-input" class="controls" type="text" placeholder="Search"><input id="submit" type="submit" value="go"></form></a></li>
                 <li><a><i class="fa fa-history fa-2x"></i></a></li>
             </ul>
         </div>
