--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 <body>
 
     <!-- <div class="container"> -->
-    <nav class="topbar transparent z-depth-0">
+    <nav class="topbar z-depth-1">
         <div class="nav-wrapper">
             <span href="#" class="brand-logo center">Cartogram</span>
         </div>
     </nav>
     <nav class="toolbar">
         <div class="nav-wrapper">
+            <span href="#" class="brand-logo center">Cartogram</span>
             <ul id="nav-mobile1" class="left">
                 <li><a id="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
                 <li><img id="avatar" class="circle"></li>
