record history, plus settings fix

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                 <a href="#">This is a link</a>
             </div> -->
         </div>
-        <div id="weather-widget" class="card blue-ish darken-1">
+        <div id="weather-widget" class="card widget blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title"><span id="weather-icon" style="float: right;"></span>Weather</span>
                 <p><span id="weatherData"></span></p>
             </div>
         </div>
-        <div id="farmers-widget" class="card blue-ish darken-1">
+        <div id="farmers-widget" class="card widget blue-ish darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Local Farmer's Markets</span>
                 <p><span id="farmersData"></span></p>
