--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </ul>
             <ul id="nav-mobile2" class="right center">
                 <li><a><i class="fa fa-map-marker fa-2x"></i></a></li>
-                <li><a><i id="searchicon" class="fa fa-search fa-2x"></i></a></li>
+                <li><a id="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
                 <li><a><form class="searchbar"><input id="pac-input" class="controls" type="text" placeholder="Search"><input id="submit" type="submit" value="go"></form></a></li>
-                <li><a><i class="fa fa-history fa-2x"></i></a></li>
+                <li><a id="history-button"><i class="fa fa-history fa-2x"></i></a></li>
             </ul>
         </div>
     </nav>
@@ -95,17 +95,19 @@
                 <p><span id="farmersData"></span></p>
             </div>
         </div>
-        <!-- <script type="text/javascript" src="assets/js/app.js"></script> -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-        <script src="https://use.fontawesome.com/62f4e174f3.js"></script>
-        <script type="text/javascript" src="assets/js/maps.js"></script>
-        <script type="text/javascript" src="assets/js/api-weather.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces" async defer></script>
-        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-        <script type="text/javascript" src="assets/js/user.js"></script>
-        <script type="text/javascript" src="assets/js/search.js"></script>
-    </body>
-
+    </div>
+    <div id="hisotry-bar">
+    </div>
+    <!-- <script type="text/javascript" src="assets/js/app.js"></script> -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://use.fontawesome.com/62f4e174f3.js"></script>
+    <script type="text/javascript" src="assets/js/maps.js"></script>
+    <script type="text/javascript" src="assets/js/api-weather.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces" async defer></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script type="text/javascript" src="assets/js/user.js"></script>
+    <script type="text/javascript" src="assets/js/search.js"></script>
+</body>
 </html>
