more history fixes

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <body>
 
     <!-- <div class="container"> -->
-    <nav class="topbar z-depth-1">
+    <nav class="blue-ish topbar z-depth-1">
         <div class="nav-wrapper">
             <span href="#" class="brand-logo center">Cartogram</span>
         </div>
     </nav>
-    <nav class="toolbar">
+    <nav class="blue-ish toolbar">
         <div class="nav-wrapper">
             <span href="#" class="brand-logo center">Cartogram</span>
             <ul id="nav-mobile1" class="left">
@@ -96,7 +96,7 @@
             </div>
         </div>
     </div>
-    <div id="hisotry-bar">
+    <div id="history-bar">
     </div>
     <!-- <script type="text/javascript" src="assets/js/app.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
