styles for mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span href="#" class="brand-logo center">Cartogram</span>
             <ul id="nav-mobile1" class="left">
                 <li><a class="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
-                <li><img class="avatar" class="circle"></li>
+                <li><img class="avatar circle"></li>
                 <li><a class="settings-button"><i class="fa fa-cog fa-2x"></i></a></li>
                 <li><a class="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
@@ -51,7 +51,7 @@
         <li><a><i class="fa fa-bars fa-2x"></i></a></li>
         <li><div class="divider"></div></li>
         <li><a class="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
-        <li><img class="avatar" class="circle"></li>
+        <li><img class="avatar circle"></li>
         <li><a class="settings-button"><i class="fa fa-cog fa-2x"></i></a></li>
         <li><a class="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
         <li><div class="divider"></div></li>
