--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a class="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
             <ul id="nav-mobile2" class="right center">
-                <<<<<<< HEAD <li><a id="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
+                 <li><a id="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
                     <li><a id="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
                     <li>
                         <a>
@@ -46,7 +46,6 @@
                         </a>
                     </li>
                     <li><a id="history-button"><i class="fa fa-history fa-2x"></i></a></li>
-                    =======
                     <li><a class="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
                     <li><a class="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
                     <li>
@@ -56,7 +55,6 @@
                         </a>
                     </li>
                     <li><a class="history-button"><i class="fa fa-history fa-2x"></i></a></li>
-                    >>>>>>> c50ad58eaee50c042df42ba8a123e1266138a1da
             </ul>
         </div>
     </nav>
