--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
 
+    <!-- <div class="container"> -->
     <nav class="blue-ish topbar z-depth-1">
         <div class="nav-wrapper">
             <span href="#" class="brand-logo center">Cartogram</span>
@@ -37,40 +38,22 @@
                 <li><a class="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
             </ul>
             <ul id="nav-mobile2" class="right center">
-                 <li><a id="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
-                    <li><a id="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
-                    <li>
-                        <a>
-                            <form class="searchbar"><input id="pac-input" class="controls" type="text" placeholder="Search"><input id="submit" type="submit"
-                                    value="go"></form>
-                        </a>
-                    </li>
-                    <li><a id="history-button"><i class="fa fa-history fa-2x"></i></a></li>
-                    <li><a class="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
-                    <li><a class="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
-                    <li>
-                        <a>
-                            <form class="searchbar"><input id="pac-input" class="controls" type="text" placeholder="Search"><input id="submit" type="submit"
-                                    value="go"></form>
-                        </a>
-                    </li>
-                    <li><a class="history-button"><i class="fa fa-history fa-2x"></i></a></li>
+                <li><a class="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
+                <li><a class="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
+                <li><a><form class="searchbar"><input id="pac-input" class="controls" type="text" placeholder="Search"><input id="submit" type="submit" value="go"></form></a></li>
+                <li><a class="history-button"><i class="fa fa-history fa-2x"></i></a></li>
             </ul>
         </div>
     </nav>
     <!-- mobile -->
     <ul id="slide-out" class="side-nav">
         <li><a><i class="fa fa-bars fa-2x"></i></a></li>
-        <li>
-            <div class="divider"></div>
-        </li>
+        <li><div class="divider"></div></li>
         <li><a class="login-button"><i class="fa fa-sign-in fa-2x"></i></a></li>
         <li><img class="avatar circle"></li>
         <li><a class="settings-button"><i class="fa fa-cog fa-2x"></i></a></li>
         <li><a class="logout-button"><i class="fa fa-sign-out fa-2x"></i></a></li>
-        <li>
-            <div class="divider"></div>
-        </li>
+        <li><div class="divider"></div></li>
         <li><a class="mapMarker"><i class="fa fa-map-marker fa-2x"></i></a></li>
         <li><a class="searchicon"><i class="fa fa-search fa-2x"></i></a></li>
         <li><a class="history-button"><i class="fa fa-history fa-2x"></i></a></li>
@@ -109,7 +92,10 @@
                 <span class="card-title">Location</span>
                 <p>You are here: <span id="location"></span></p>
             </div>
-
+            <!-- <div class="card-action">
+                <a href="#">This is a link</a>
+                <a href="#">This is a link</a>
+            </div> -->
         </div>
         <div id="weather-widget" class="card widget blue-ish darken-1">
             <div class="card-content white-text">
@@ -132,9 +118,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/62f4e174f3.js"></script>
     <script type="text/javascript" src="assets/js/maps.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/api-weather.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces"
-        async defer></script>
+    <script type="text/javascript" src="assets/js/api-weather.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvm6i_3YLimMJdS6BAHLKWLW9g723m8o&libraries=places&callback=initMapLocationPlaces" async defer></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script type="text/javascript" src="assets/js/user.js"></script>
     <script type="text/javascript" src="assets/js/search.js"></script>
